syntax = "proto3";
package nibiru.pricefeed.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "common/common.proto";

option go_package = "github.com/NibiruChain/nibiru/x/pricefeed/types";
option (gogoproto.equal_all)         = true;
// option (gogoproto.verbose_equal_all) = true;

// Params defines the parameters for the module.
message Params {
  repeated string pairs = 1; 
}

message OraclesProto {
  repeated bytes oracles = 1 [
    (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];
}

message ActiveProto {
  bool active = 1;
}

// PostedPrice defines a price for an asset pair posted by a specific oracle.
message PostedPrice {
  string pair_id      = 1 [(gogoproto.customname) = "PairID"];
  bytes  oracle_address = 2 [
    (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];
  string price = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  google.protobuf.Timestamp expiry = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

// CurrentPrice defines the current price for an asset pair in the pricefeed
// module.
message CurrentPrice {
  string pair_id = 1 [(gogoproto.customname) = "PairID"];
  string price = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}


// CurrentTWAP states defines the numerator and denominator for the TWAP calculation
message CurrentTWAP {
  string pair_id = 1 [(gogoproto.customname) = "PairID"];
  string numerator = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string denominator = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  string price = 4 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}